src/test/ui/issues/issue-26619.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/issue-26619.rs:7:66
   |
LL |         for s in vec!["1|2".to_string()].into_iter().filter_map(|ref line| self.make_entry(line)) {
   |                                                                  ^^^^^^^^                      -- temporary value needs to live until here
   |                                                                  |                             |
   |                                                                  |                             temporary value dropped here while still borrowed
   |                                                                  temporary value does not live long enough

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
